# Tema2_PAOO

./: CMakeLists.txt  README.md
inc/: Book.hpp
src/: Book.cpp  main.cpp
